log/build_2025-04-08_15-18-21/lab4_image_receiver/stdout_stderr.log
-- Found ament_cmake: 1.3.11 (/opt/ros/humble/share/ament_cmake/cmake)
-- Found rclcpp: 16.0.12 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.6 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.6 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.6 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.7 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.11 (/opt/ros/humble/share/image_transport/cmake)
-- Found visualization_msgs: 4.8.0 (/opt/ros/humble/share/visualization_msgs/cmake)
-- Found tf2: 0.25.12 (/opt/ros/humble/share/tf2/cmake)
-- Found ament_lint_auto: 0.12.12 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: /home/eragon/ArUco/src/lab4_image_receiver/include
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the docstring style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/eragon/ArUco/build/lab4_image_receiver
Consolidate compiler generated dependencies of target lab4_image_receiver_node
[ 50%] Building CXX object CMakeFiles/lab4_image_receiver_node.dir/src/lab4_image_receiver_node.cpp.o
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp: In member function ‘void ArUcoDetector::image_callback(const ConstSharedPtr&)’:
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:68:35: warning: narrowing conversion of ‘((-((ArUcoDetector*)this)->ArUcoDetector::marker_size) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   68 |                     {-marker_size / 2, marker_size / 2, 0},  // Верхний левый угол
      |                      ~~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:68:52: warning: narrowing conversion of ‘(((ArUcoDetector*)this)->ArUcoDetector::marker_size / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   68 |                     {-marker_size / 2, marker_size / 2, 0},  // Верхний левый угол
      |                                        ~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:69:34: warning: narrowing conversion of ‘(((ArUcoDetector*)this)->ArUcoDetector::marker_size / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   69 |                     {marker_size / 2, marker_size / 2, 0},  // Верхний правый угол
      |                      ~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:69:51: warning: narrowing conversion of ‘(((ArUcoDetector*)this)->ArUcoDetector::marker_size / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   69 |                     {marker_size / 2, marker_size / 2, 0},  // Верхний правый угол
      |                                       ~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:70:34: warning: narrowing conversion of ‘(((ArUcoDetector*)this)->ArUcoDetector::marker_size / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   70 |                     {marker_size / 2, -marker_size / 2, 0}, // Нижний правый угол
      |                      ~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:70:52: warning: narrowing conversion of ‘((-((ArUcoDetector*)this)->ArUcoDetector::marker_size) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   70 |                     {marker_size / 2, -marker_size / 2, 0}, // Нижний правый угол
      |                                       ~~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:71:35: warning: narrowing conversion of ‘((-((ArUcoDetector*)this)->ArUcoDetector::marker_size) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   71 |                     {-marker_size / 2, -marker_size / 2, 0} // Нижний левый угол
      |                      ~~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:71:53: warning: narrowing conversion of ‘((-((ArUcoDetector*)this)->ArUcoDetector::marker_size) / (double)2)’ from ‘double’ to ‘float’ [-Wnarrowing]
   71 |                     {-marker_size / 2, -marker_size / 2, 0} // Нижний левый угол
      |                                        ~~~~~~~~~~~~~^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:92:17: error: ‘tf2’ has not been declared
   92 |                 tf2::Matrix3x3 tf_rotation(
      |                 ^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:97:17: error: ‘tf2’ has not been declared
   97 |                 tf2::Quaternion q;
      |                 ^~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:98:17: error: ‘tf_rotation’ was not declared in this scope
   98 |                 tf_rotation.getRotation(q);
      |                 ^~~~~~~~~~~
/home/eragon/ArUco/src/lab4_image_receiver/src/lab4_image_receiver_node.cpp:98:41: error: ‘q’ was not declared in this scope
   98 |                 tf_rotation.getRotation(q);
      |                                         ^
gmake[2]: *** [CMakeFiles/lab4_image_receiver_node.dir/build.make:76: CMakeFiles/lab4_image_receiver_node.dir/src/lab4_image_receiver_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/lab4_image_receiver_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
